<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/logo_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3"
        tools:ignore="MissingClass" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#23A9E6"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin">

        <TextView
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:text="@string/register"
            android:textColor="#2c2c2c"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="@string/getPasswordBack"
            android:textColor="#2c2c2c"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/id_fast_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tencentQQ"
                app:drawableTopCompat="@drawable/qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/weiXin"
                app:drawableTopCompat="@drawable/wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/sina"
                app:drawableTopCompat="@drawable/sina" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fastLogin"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
