<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/writeplanpicture"
    tools:context=".activity.FocusActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="88dp"
        android:background="#9FACEBED"
        android:hint="@string/title"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="#9FACEBED"
        android:gravity="center_vertical|left"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#9FACEBED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">


        <TextView
            android:id="@+id/textViewPeriod"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:gravity="center_vertical|left"
            android:paddingLeft="10dp"
            android:text="周期："
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/weekdaySpinner"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_marginStart="1dp"
            android:entries="@array/weekday_array"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewPeriod"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Your other layout elements here -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#9FACEBED"
        app:layout_constraintBottom_toTopOf="@+id/timeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutDateRange">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toTopOf="@+id/timeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Title -->

        <!-- Save icon -->

        <ImageView
            android:id="@+id/imageViewSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="42dp"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toTopOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutDateRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/editTextMemo"
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:background="#7222EDFF"
        android:gravity="start"
        android:hint="@string/input"
        android:maxLines="999"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartDate2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="407dp"
        android:background="#9FACEBED"
        android:clickable="true"
        app:layout_constraintWidth_percent="0.5"
        android:drawableEnd="@drawable/ic_calendar"
        android:focusable="false"
        android:inputType="none"
        android:padding="8dp"
        android:text="开始日期"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#9FACEBED"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_calendar"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintWidth_percent="0.5"
        android:padding="8dp"
        android:text="结束日期"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextStartDate"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottom_navigation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:background="?android:attr/windowBackground"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:menu="@menu/bottom_navigation_menu" />-->

    <EditText
        android:id="@+id/editTextEndDate2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#9FACEBED"
        android:clickable="true"
        app:layout_constraintWidth_percent="0.5"
        android:drawableEnd="@drawable/ic_launcher_clock"
        android:focusable="false"
        android:inputType="none"
        android:padding="8dp"
        android:text="结束时间"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextStartDate2"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndDate" />

    <EditText
        android:id="@+id/editTextStartDate2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#9FACEBED"
        android:clickable="true"
        app:layout_constraintWidth_percent="0.5"
        android:drawableEnd="@drawable/ic_launcher_clock"
        android:focusable="false"
        android:inputType="none"
        android:padding="8dp"
        android:text="开始时间"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartDate" />


</androidx.constraintlayout.widget.ConstraintLayout>